<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/new_range_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/new_range"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/saved_ranges_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/saved_ranges"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/qualification"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/qualification"
            android:layout_gravity="center" />



    </LinearLayout>

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="@string/footer" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>